[package]
name = "g4"
version = "0.1.0"
authors = ["jmurray <john@gardenway.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hyper = "*"
# google-sheets4 = "1.0.13"
# hyper-rustls = "0.20.0"
# yup-oauth2 = "4.1.0"

google-sheets4 = "*"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^1.0"